force-app/main/default/objects/Coupons__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>ExpiryDate__c  &lt;  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the coupon is expired or not</inlineHelpText>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>