force-app/main/default/objects/Coupons__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <inlineHelpText>Indicates when the coupon will be expired</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>