force-app/main/default/objects/Coupons__c/validationRules/DiscountRule.validationRule-meta.xml
<ValidationRule>
    <fullName>DiscountRule</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Percentage&apos;)</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Please enter a value</errorMessage>
</ValidationRule>