force-app/main/default/objects/Coupons__c/validationRules/Expiry_Date_Validate.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_Date_Validate</fullName>
    <active>true</active>
    <description>Expiry Date should always be greater than today while creating the record</description>
    <errorConditionFormula>ExpiryDate__c   &lt;   TODAY()</errorConditionFormula>
    <errorDisplayField>ExpiryDate__c</errorDisplayField>
    <errorMessage>Expiry Date should always be greater than today while creating the record</errorMessage>
</ValidationRule>