force-app/main/default/objects/Coupons__c/validationRules/FlatDiscountRule.validationRule-meta.xml
<ValidationRule>
    <fullName>FlatDiscountRule</fullName>
    <active>true</active>
    <description>Required if type is Flat</description>
    <errorConditionFormula>ISPICKVAL( Type__c, &apos;Flat&apos;)</errorConditionFormula>
    <errorDisplayField>FlatDiscount__c</errorDisplayField>
    <errorMessage>Please Enter a Value</errorMessage>
</ValidationRule>